<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/badminton"
    tools:context="com.vishalkatgaye.badmintonscorecard.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/dark_gray"
        android:fontFamily="cursive"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="@dimen/big_head_scale"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/parent_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_dim"
        android:layout_marginRight="@dimen/default_dim"
        android:layout_marginTop="@dimen/high_dim"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/no_dim"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_dim"
            android:layout_marginRight="@dimen/low_dim"
            android:layout_marginTop="@dimen/low_dim"
            android:layout_weight="1"
            android:background="@color/green"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/first_player"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="@dimen/head_scale" />

            <TextView
                android:id="@+id/scoreCountA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/low_dim"
                android:layout_marginTop="@dimen/low_dim"
                android:text="@string/initial_score"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/big_head_scale" />

            <TextView
                android:id="@+id/resultCountA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/no_result"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="@dimen/head_scale" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/low_dim"
                android:layout_marginLeft="@dimen/default_dim"
                android:layout_marginRight="@dimen/default_dim"
                android:onClick="setPlayerAPointer"
                android:text="@string/score"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_dim"
                android:layout_marginLeft="@dimen/default_dim"
                android:layout_marginRight="@dimen/default_dim"
                android:layout_marginTop="@dimen/low_dim"
                android:onClick="awayScoreA"
                android:text="@string/away"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/no_dim"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_dim"
            android:layout_marginRight="@dimen/low_dim"
            android:layout_marginTop="@dimen/low_dim"
            android:layout_weight="1"
            android:background="@color/green"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/second_player"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="@dimen/head_scale" />

            <TextView
                android:id="@+id/scoreCountB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/initial_score"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/big_head_scale" />

            <TextView
                android:id="@+id/resultCountB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/low_dim"
                android:text="@string/no_result"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="@dimen/head_scale" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/low_dim"
                android:layout_marginLeft="@dimen/default_dim"
                android:layout_marginRight="@dimen/default_dim"
                android:onClick="setPlayerBPointer"
                android:text="@string/score"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_dim"
                android:layout_marginLeft="@dimen/default_dim"
                android:layout_marginRight="@dimen/default_dim"
                android:layout_marginTop="@dimen/low_dim"
                android:onClick="awayScoreB"
                android:text="@string/away"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parent_frame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/dark_gray"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="@color/red"
        android:textSize="@dimen/default_scale" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:text="@string/instruction_head"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/head_scale"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/instruction1"
        android:textColor="@color/white"
        android:textSize="@dimen/default_scale"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/instruction2"
        android:textColor="@color/white"
        android:textSize="@dimen/default_scale"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/instruction3"
        android:textColor="@color/white"
        android:textSize="@dimen/default_scale"
        android:textStyle="bold" />

</RelativeLayout>

